--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "api.studio.cooders.org",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "start": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
     "url": "https://github.com/chuchra-himanshu/api.studio.cooders.org/issues"
   },
   "homepage": "https://github.com/chuchra-himanshu/api.studio.cooders.org#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^24.0.13",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  }
 }
