--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-     "start": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/server.ts"
+    "start": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "mongoose": "^8.16.3"
   }
 }
