Setup Express Server and Environment Variables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,12 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "moduleDetection": "force",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
+  },
+  "ts-node": {
+    "esm": true
   },
   "include": ["src"]
 }
