--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "start": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm\" src/server.ts"
+    "start": "tsx watch src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/chuchra-himanshu/api.studio.cooders.org#readme",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.13",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "mongoose": "^8.16.3"
   }
 }
